# nerdland-digital-codec

./: .clang-format  .gitignore  LICENSE  Makefile  README.md
app/include/: common.h  stm32l4xx_hal_conf.h  vga.h
app/include/core/: system.h  timer.h  uart.h
app/include/usb/: usb.h  usb_host.h  usbh_conf.h  usbh_core.h  usbh_ctlreq.h  usbh_def.h  usbh_hid.h  usbh_hid_keybd.h  usbh_hid_mouse.h  usbh_hid_parser.h  usbh_hid_usage.h  usbh_ioreq.h  usbh_pipes.h  usbh_platform.h
app/include/video/: font.h  graphics.h  vga.h
app/src/: firmware.c  vga.c
app/src/core/: syscalls.c  sysmem.c  system.c  timer.c  uart.c
app/src/usb/: usb.c  usb_host.c  usbh_conf.c  usbh_core.c  usbh_ctlreq.c  usbh_hid.c  usbh_hid_keybd.c  usbh_hid_mouse.c  usbh_hid_parser.c  usbh_ioreq.c  usbh_pipes.c  usbh_platform.c
app/src/video/: font.c  graphics.c  vga.c
cmake/: CMakeLists.txt  stm32l4.cmake  toolchain-arm-none-eabi.cmake
stm32/: stm32l476rg.ld
